syntax="proto3";

option go_package = "clue/comm";

message Message {
    oneof data {
        Connect con = 1;
        Opponent opp = 2;
        Command com = 3;
        GameEnd end = 4;
        SetPlayer setChar = 5;
        StartGame start = 6;
        RemoveAnswer rAns = 7;
        Cards cards = 8;
        StartTurn turn = 9;
        EndTurn endturn = 10;
        Move move = 11;
        Accuse accuse = 12;
        Show show = 13;
    }
}

message Move {
    string RoomName = 1;
}

message StartTurn {

}

message EndTurn {

}

message RemoveAnswer {
    int32 Room = 1;
    int32 Char = 2;
    int32 Weap = 3;
}

message Cards {
    repeated string index = 1;
}

message Opponent {
    string PlayerName = 1;
    oneof data {
        Connect con = 2;
        SetPlayer setChar = 3;
        Move move =4;
        Accuse accuse = 5;
        AskShow Ask = 6;
        Show show = 7;
        StartTurn startturn = 8;
        EndTurn endturn = 9;
    }
}

message AskShow {
    repeated string cards = 1;
}

message Show {
    string card = 1;
    string PlayerName =2;
    bool HasCard = 3;
}

message Accuse {
    string Weap = 1;
    string Char = 2;
    string Room = 3;
    bool final =4;
}

message GameEnd {

}

enum CommandType {
    PICK_CHAR = 0;
}

message Command {
    CommandType type = 1;
}

message Connect {
    string playerName = 1;
    bool Success = 2;
}

message SetPlayer {
    string CharacterName = 1;
}

message StartGame {

}

service ClueService {
    rpc GameStream(stream Message) returns(stream Message); 
}